--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,24 @@
-# Node modules
-node_modules/
-
 # Logs
-logs/
+logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+lerna-debug.log*
 
-# Environment variables
-.env
+node_modules
+dist
+dist-ssr
+*.local
 
-# Cache
-.cache/
-dist/
-build/
-
-# IDE specific files
-.vscode/
-.idea/
-
-# OS generated files
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
 .DS_Store
-Thumbs.db
-
-# Temporary files
-*.tmp
-*.temp
-*.swp
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
